# manatee

./: .gitignore  PRIVACY.md  README.md
backend/: go.mod  go.sum  main.go  package.json  tsconfig.json  verify.go  wrangler.toml
backend/commands/: advice.go  blur.go  cat.go  grayscale.go  ip.go  main.go  map.go  movie.go  pixelate.go  sepia.go  translate.go  trivia.go  weather.go
backend/components/: cat_reload.go  main.go  trivia.go
backend/src/: index.ts
backend/types/: components.go  discord.go  interactions.go
dashboard/: .gitignore  next-i18next.config.js  next.config.js  package.json
dashboard/components/: Button.module.css  Button.tsx  Footer.module.css  Footer.tsx  GuildListItem.js  GuildListItem.module.css  GuildListItem.tsx  Hero.module.css  Hero.tsx  Layout.module.css  Layout.tsx  Navbar.js  Navbar.module.css  Navbar.tsx  Spinner.module.css  Spinner.tsx  TitleCard.js  TitleCard.module.css
dashboard/pages/: _app.js  _app.tsx  docs.module.css  docs.tsx  guilds.js  guilds.module.css  guilds.tsx  index.js  index.module.css  index.tsx  privacy.js  privacy.module.css  privacy.tsx
dashboard/public/: cmds.json
dashboard/styles/: Navbar.module.css  globals.css
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/src/commands/: advice.rs  cat.rs  mod.rs
gateway/src/components/: cat_reload.rs  mod.rs
gateway/src/events/: guild.rs  interaction.rs  member.rs  message.rs  mod.rs
main/: package.json  tsconfig.json
slash/: commands.ts  index.ts  main.ts  package.json  tsconfig.json  types.d.ts  verify.ts  webpack.config.js  wrangler.toml
(+74 files in other folders)
