[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
twilight-gateway = "0.9"
twilight-http = "0.9"
twilight-model = "0.9"
